--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,14 @@
         "browser": true
     },
     "extends": ["react-app", "react-app/jest"],
+    "rules": {
+        "react-hooks/exhaustive-deps": [
+            "warn",
+            {
+                "additionalHooks": "(useRecoilCallback|useRecoilTransaction_UNSTABLE)"
+            }
+        ]
+    },
     "overrides": [
         {
             "files": ["**/*.stories.*"],
