chore(jest): configure jest

--- a/package.json
+++ b/package.json
@@ -1,56 +1,65 @@
 {
-  "name": "checklister",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "prettify": "prettier --write '{,!(node_modules)/**/}*.{ts,tsx,json}'",
-    "lintify": "eslint -f table . --ext .tsx,.ts --fix",
-    "lint": "eslint . --ext .ts,.tsx -f table",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "@mantine/core": "^4.1.3",
-    "@mantine/form": "^4.1.3",
-    "@mantine/hooks": "^4.1.3",
-    "@types/ramda": "^0.28.11",
-    "ramda": "^0.28.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "recoil": "^0.7.1",
-    "tabler-icons-react": "^1.45.0",
-    "typesafe-routes": "https://github.com/kruschid/typesafe-routes.git",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@storybook/addon-actions": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/react": "^6.4.22",
-    "@storybook/testing-library": "^0.0.9",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "babel-loader": "^8.2.4",
-    "eslint": "^8.2.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-formatter-table": "^7.32.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^26.1.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.2"
-  }
+    "name": "checklister",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "prettify": "prettier --write '{,!(node_modules)/**/}*.{ts,tsx,json}'",
+        "lintify": "eslint -f table . --ext .tsx,.ts --fix",
+        "lint": "eslint . --ext .ts,.tsx -f table",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "dependencies": {
+        "@mantine/core": "^4.1.3",
+        "@mantine/form": "^4.1.3",
+        "@mantine/hooks": "^4.1.3",
+        "@types/ramda": "^0.28.11",
+        "ramda": "^0.28.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-router": "^6.3.0",
+        "react-router-dom": "^6.3.0",
+        "recoil": "^0.7.1",
+        "tabler-icons-react": "^1.45.0",
+        "typesafe-routes": "https://github.com/kruschid/typesafe-routes.git",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.17.9",
+        "@storybook/addon-actions": "^6.4.22",
+        "@storybook/addon-essentials": "^6.4.22",
+        "@storybook/addon-interactions": "^6.4.22",
+        "@storybook/addon-links": "^6.4.22",
+        "@storybook/react": "^6.4.22",
+        "@storybook/testing-library": "^0.0.9",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^14.1.1",
+        "@types/jest": "^27.4.1",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.19.0",
+        "@typescript-eslint/parser": "^5.19.0",
+        "@vitejs/plugin-react": "^1.3.0",
+        "babel-loader": "^8.2.4",
+        "eslint": "^8.2.0",
+        "eslint-config-react-app": "^7.0.1",
+        "eslint-formatter-table": "^7.32.1",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-jest": "^26.1.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "jest": "^27.5.1",
+        "prettier": "^2.6.2",
+        "testing-library-selector": "^0.2.1",
+        "ts-jest": "^27.1.4",
+        "typescript": "^4.6.3",
+        "vite": "^2.9.2"
+    }
 }
