--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mantine/form": "^4.1.3",
         "@mantine/hooks": "^4.1.3",
         "@types/ramda": "^0.28.11",
+        "@types/uuid": "^8.3.4",
         "ramda": "^0.28.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
