--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
-        "@mantine/core": "^4.1.3",
+        "@chakra-ui/react": "^1.8.8",
+        "@emotion/react": "^11",
+        "@emotion/styled": "^11",
         "@mantine/form": "^4.1.3",
         "@mantine/hooks": "^4.1.3",
         "@types/ramda": "^0.28.11",
         "@types/uuid": "^8.3.4",
+        "framer-motion": "^6",
         "ramda": "^0.28.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
