--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "lintify": "eslint -f table . --ext .tsx,.ts --fix",
         "lint": "eslint . --ext .ts,.tsx -f table",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "chromatic": "chromatic"
     },
     "dependencies": {
         "@chakra-ui/react": "^1.8.8",
@@ -39,6 +40,7 @@
         "@storybook/addon-essentials": "^6.4.22",
         "@storybook/addon-interactions": "^6.4.22",
         "@storybook/addon-links": "^6.4.22",
+        "@storybook/builder-vite": "^0.1.30",
         "@storybook/react": "^6.4.22",
         "@storybook/testing-library": "^0.0.9",
         "@testing-library/jest-dom": "^5.16.4",
@@ -51,6 +53,7 @@
         "@typescript-eslint/parser": "^5.19.0",
         "@vitejs/plugin-react": "^1.3.0",
         "babel-loader": "^8.2.4",
+        "chromatic": "^6.5.4",
         "eslint": "^8.2.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-formatter-table": "^7.32.1",
