--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,22 +61,8 @@ jobs:
   #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
   #     - name: Check types
   #       run: yarn type-check
-  # unit-tests:
-  #   runs-on: ubuntu-latest
-  #   needs: [install-dependencies]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Restore dependencies
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: node_modules
-  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-  #     - name: Run tests
-  #       run: yarn test
-  # e2e-tests
-  build:
+  unit-tests:
     runs-on: ubuntu-latest
-    # needs: [eslint, type-check, unit-tests]
     needs: [install-dependencies]
     steps:
       - uses: actions/checkout@v3
@@ -85,16 +71,11 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Build the app
-        run: yarn build
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: dist
-  deploy:
+      - name: Run tests
+        run: yarn test
+  test-coverage:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [install-dependencies]
     steps:
       - uses: actions/checkout@v3
       - name: Restore dependencies
@@ -102,15 +83,48 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Download build artifact
-        uses: actions/download-artifact@v2
+      - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          name: build
-          path: dist
-      - name: Publish to Netlify
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy --dir=dist
-        env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          package-manager: yarn
+          skip-step: install
+  # e2e-tests
+  # build:
+  #   runs-on: ubuntu-latest
+  #   # needs: [eslint, type-check, unit-tests]
+  #   needs: [install-dependencies]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Restore dependencies
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: node_modules
+  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+  #     - name: Build the app
+  #       run: yarn build
+  #     - name: Upload build artifact
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: build
+  #         path: dist
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [build]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Restore dependencies
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: node_modules
+  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+  #     - name: Download build artifact
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: build
+  #         path: dist
+  #     - name: Publish to Netlify
+  #       uses: netlify/actions/cli@master
+  #       with:
+  #         args: deploy --dir=dist
+  #       env:
+  #         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+  #         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
