--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: main
+
 on: push
 
 concurrency:
@@ -29,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 14
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
@@ -61,36 +62,8 @@ jobs:
   #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
   #     - name: Check types
   #       run: yarn type-check
-  unit-tests:
-    runs-on: ubuntu-latest
-    needs: [install-dependencies]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Restore dependencies
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - name: Run tests
-        run: yarn test
-  test-coverage:
-    runs-on: ubuntu-latest
-    needs: [install-dependencies]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Restore dependencies
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-      - uses: ArtiomTr/jest-coverage-report-action@v2
-        with:
-          package-manager: yarn
-          skip-step: install
-  # e2e-tests
-  # build:
+  # unit-tests:
   #   runs-on: ubuntu-latest
-  #   # needs: [eslint, type-check, unit-tests]
   #   needs: [install-dependencies]
   #   steps:
   #     - uses: actions/checkout@v3
@@ -99,32 +72,69 @@ jobs:
   #       with:
   #         path: node_modules
   #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-  #     - name: Build the app
-  #       run: yarn build
-  #     - name: Upload build artifact
-  #       uses: actions/upload-artifact@v2
+  #     - name: Run tests
+  #       run: yarn test:coverage
+  #     - uses: ArtiomTr/jest-coverage-report-action@v2
   #       with:
-  #         name: build
-  #         path: dist
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [build]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Restore dependencies
-  #       uses: actions/cache@v3
-  #       with:
-  #         path: node_modules
-  #         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-  #     - name: Download build artifact
-  #       uses: actions/download-artifact@v2
-  #       with:
-  #         name: build
-  #         path: dist
-  #     - name: Publish to Netlify
-  #       uses: netlify/actions/cli@master
-  #       with:
-  #         args: deploy --dir=dist
-  #       env:
-  #         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-  #         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+  #         package-manager: yarn
+  #         coverage-file: coverage/results.json
+  #         base-coverage-file: coverage/results.json
+  #         skip-step: install
+  #         annotations: none
+
+  # e2e-tests
+  build:
+    runs-on: ubuntu-latest
+    # needs: [eslint, type-check, unit-tests]
+    needs: [install-dependencies]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Restore dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+      - name: Build the app
+        run: yarn build
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: dist
+          retention-days: 1
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Restore dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: dist
+
+      - name: Deploy to Netlify preview
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        if: ${{ github.ref != 'refs/heads/main' }}
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=dist
+
+      - name: Deploy to Netlify production
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=dist --prod
