--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
         "ramda": "^0.28.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-icons": "^4.3.1",
         "react-router": "^6.3.0",
         "react-router-dom": "^6.3.0",
         "recoil": "^0.7.1",
-        "tabler-icons-react": "^1.45.0",
         "typesafe-routes": "https://github.com/kruschid/typesafe-routes.git",
         "uuid": "^8.3.2"
     },
@@ -51,6 +51,7 @@
         "@types/jest": "^27.4.1",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@types/react-icons": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
         "@vitejs/plugin-react": "^1.3.0",
@@ -67,6 +68,7 @@
         "jest": "^27.5.1",
         "netlify-cli": "^10.1.0",
         "prettier": "^2.6.2",
+        "rollup-plugin-visualizer": "^5.6.0",
         "testing-library-selector": "^0.2.1",
         "ts-jest": "^27.1.4",
         "typescript": "^4.6.3",
