--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,7 @@ jobs:
   # e2e-tests
   build:
     runs-on: ubuntu-latest
-    needs: [install-dependencies]
+    needs: [eslint, type-check, unit-tests]
     steps:
       - uses: actions/checkout@v3
       - name: Restore dependencies
@@ -104,7 +104,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [install-dependencies]
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
 
