feature: add confirmation before removing a checklist

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.17.9",
+        "@faker-js/faker": "^6.2.0",
         "@storybook/addon-actions": "^6.4.22",
         "@storybook/addon-essentials": "^6.4.22",
         "@storybook/addon-interactions": "^6.4.22",
