chore(github): install yarn with --frozen-lockfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: install-dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
 
   eslint:
     runs-on: ubuntu-latest
