--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "lint": "eslint . --ext .ts,.tsx -f table",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "deploy": "netlify deploy --dir=dist"
+        "deploy": "netlify deploy --dir=dist",
+        "commit": "git-cz"
     },
     "dependencies": {
         "@chakra-ui/react": "^1.8.8",
@@ -58,6 +59,8 @@
         "@vitejs/plugin-react": "^1.3.0",
         "babel-loader": "^8.2.4",
         "chromatic": "^6.5.4",
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^8.2.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-formatter-table": "^7.32.1",
